[package]
name = "dnd-character-creator"
version = "0.0.1"
edition = "2021"
authors = ["Tsvetan"]
description = "A DnD Character Creator app"

[[bin]]
name = "api_cli"
path = "src/bin/api_cli.rs"

[dependencies]
eframe = "0.24.1"  # egui framework for the UI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.12"  # File dialogs
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true 